--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --signal SIGINT --inspect index.js"
+    "dev": "nodemon --signal SIGINT --inspect index.js",
+    "windowsDebug": "@powershell $env:DEBUG='application,-express:router*' ; node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "debug": "^4.3.4",
     "express": "^4.18.1"
   },
   "devDependencies": {
