--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --signal SIGINT --inspect server.js",
-    "windowsDebug": "@powershell $env:DEBUG='application,-express:router*' ; node server.js"
+    "dev": "nodemon --signal SIGINT --inspect index.js",
+    "windowsDebug": "@powershell $env:DEBUG='application,-express:router*' ; node index.js",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +17,7 @@
     "pg": "^8.7.3"
   },
   "devDependencies": {
+    "jest": "^28.1.3",
     "nodemon": "^2.0.19"
   }
 }
