--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@hapi/hapi": "^20.2.2",
     "debug": "^4.3.4",
     "express": "^4.18.1",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "sequelize": "^6.21.3"
   },
   "devDependencies": {
     "jest": "^28.1.3",
