--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hapi/hapi": "^20.2.2",
     "debug": "^4.3.4",
     "express": "^4.18.1",
+    "passport-jwt": "^4.0.0",
     "pg": "^8.7.3",
     "sequelize": "^6.21.3"
   },
